--- a/styles.css
+++ b/styles.css
@@ -78,11 +78,32 @@ li a:hover:not(.active) {
   display: inline-block;
 }
 .classes{
-  border-style: ridge;
   /*background-color: yellow;*/
   height: 300px;
-  width: 20%;
+  width: 55%;
 
+}
+.price{
+  float: right;
+  width: 25%;
+}
+.total{
+ width: 20%;
+}
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #crimson;
 }
 .diet{
   border-style: ridge;
@@ -102,7 +123,7 @@ li a:hover:not(.active) {
 .booking{
   border-style: ridge;
   height: 300px;
-  width: 20%;
+  width: 80%;
   /*background-color: pink;*/
 
 }
